View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0033404 | Open CASCADE | OCCT:Configuration | public | 2023-06-06 16:04 | 2024-07-18 21:57 |
Reporter | dpasukhi | Assigned To | dpasukhi | ||
Priority | normal | Severity | minor | ||
Status | new | Resolution | open | ||
Target Version | 7.7.3 | ||||
Summary | 0033404: Configuration - Building with Cotire failed on Clang-15 | ||||
Description | The reason of such behavior on Ubuntu stations(Clang-15) is that file occt\build\src\TKernel\cotire\TKernel_CXX_prefix.cxx contains including of header file /usr/include/inttypes.h There 2 solutions - use old definition way with macro or use C++ include. Old definition way is necessary to compilers that not support c++11. But we dropped of supper them. So, the reasonable solution - use c++ includes. | ||||
Tags | No tags attached. | ||||
Test case number | |||||
|
Branch CR33404 has been created by dpasukhi. SHA-1: 45d70a0fc86a79414f0c7fc4fca71e9d1e76a91f Detailed log of new commits: Author: dpasukhi Date: Tue Jun 6 13:19:14 2023 +0000 0033404: Configuration - Building with Cotire failed on Clang-15 Replaced old including of int defs from C standard into C++(11+) standard |
|
Branch CR33404 has been updated forcibly by dpasukhi. SHA-1: c975787c6c6ed685f5eb026201249df9df87656f |
|
Reminder sent to: dpasukhi |
Date Modified | Username | Field | Change |
---|---|---|---|
2023-06-06 16:04 | dpasukhi | New Issue | |
2023-06-06 16:04 | dpasukhi | Assigned To | => dpasukhi |
2023-06-06 16:19 | git | Note Added: 0113617 | |
2023-06-06 16:23 | git | Note Added: 0113618 | |
2023-07-31 13:20 | dpasukhi | Target Version | 7.7.2 => 7.7.3 |
2024-07-18 21:57 | dpasukhi | Note Added: 0116259 |