0033404: Configuration - Building with Cotire failed on Clang-15

Replaced old including of int defs from C standard into C++(11+) standard