src/ExpToCasExe/lex.exptocas.cxx
@@ -1,7 +1,5 @@
 // Pre-include stdlib.h to avoid redefinition of integer type macros (INT8_MIN and similar in generated code)
-#if !defined(_MSC_VER) || (_MSC_VER >= 1600) // Visual Studio 2010+
-#include "stdint.h"
-#endif
+#include <Standard_TypeDef.hxx>
 
 #define  YY_INT_ALIGNED short int
 
