src/Standard/Standard_TypeDef.hxx
@@ -17,41 +17,8 @@
 
 #include <cstddef>
 #include <ctime>
-
-#include <stdint.h>
-
-#if(defined(_MSC_VER) && (_MSC_VER < 1800))
-  // only Visual Studio 2013 (vc12) provides <cinttypes> header
-  // we do not defined all macros here - only used by OCCT framework
-  #define PRIx64 "I64x"
-  #define PRIX64 "I64X"
-  #define PRId64 "I64d"
-  #define PRIu64 "I64u"
-  #define SCNd64 "I64d"
-  #define SCNu64 "I64u"
-  #ifdef _WIN64
-    #define PRIxPTR "I64x"
-    #define PRIXPTR "I64X"
-    #define PRIdPTR "I64d"
-    #define PRIuPTR "I64u"
-    #define SCNdPTR "I64d"
-    #define SCNuPTR "I64u"
-  #else
-    #define PRIxPTR "Ix"
-    #define PRIXPTR "IX"
-    #define PRIdPTR "d"
-    #define PRIuPTR "u"
-    #define SCNdPTR "d"
-    #define SCNuPTR "u"
-  #endif
-#else
-  // should be just <cinttypes> since C++11
-  // however we use this code for compatibility with old C99 compilers
-  #ifndef __STDC_FORMAT_MACROS
-    #define __STDC_FORMAT_MACROS
-  #endif
-  #include <inttypes.h>
-#endif
+#include <cstdint>
+#include <cinttypes>
 
 #define Standard_False false
 #define Standard_True  true
