src/StepFile/lex.step.cxx
@@ -2,9 +2,7 @@
 // This file is generated, do not modify it directly; edit source file step.lex instead.
 
 // Pre-include stdlib.h to avoid redefinition of integer type macros (INT8_MIN and similar in generated code)
-#if !defined(_MSC_VER) || (_MSC_VER >= 1600) // Visual Studio 2010+
-#include "stdint.h"
-#endif
+#include <Standard_TypeDef.hxx>
 
 #define  YY_INT_ALIGNED short int
 
